--- a/JhonMicroservices-FirstMicrosservices/GeekShopping/GeekShopping.CartAPI/Properties/launchSettings.json
+++ b/JhonMicroservices-FirstMicrosservices/GeekShopping/GeekShopping.CartAPI/Properties/launchSettings.json
@@ -3,8 +3,7 @@
     "profiles": {
         "GeekShopping.CartAPI": {
             "commandName": "Project",
-            "dotnetRunMessages": true,
-            "launchBrowser": true,
+            "launchBrowser": false,
             "launchUrl": "swagger",
             "applicationUrl": "https://localhost:5200;http://localhost:5201",
             "environmentVariables": {
