--- a/JhonMicroservices-FirstMicrosservices/GeekShopping/GeekShopping.Web/appsettings.json
+++ b/JhonMicroservices-FirstMicrosservices/GeekShopping/GeekShopping.Web/appsettings.json
@@ -6,8 +6,9 @@
     }
   },
   "AllowedHosts": "*",
-  "ServiceUrls": {
-    "ProductAPI": "https://localhost:4440",
-    "IdentityServer": "https://localhost:4435"
-  }
+    "ServiceUrls": {
+        "ProductAPI": "https://localhost:4440",
+        "IdentityServer": "https://localhost:4435",
+        "CartAPI": "https://localhost:5200"
+    }
 }
